test/invalid-syntax/56311_double_semicolons/double_semicolons.agu
-- Author: tcomp56311, João Vedor

-- Syntax Problem

let x : Int = 5 + 3; 4 + 3; ;

-- Error: Use of multiple semicolons